# gpn-api-client

./: .env  README.md  pyproject.toml  requirements.txt
.gigaide/: gigaide.properties
api_client_opti24/: client.py  config.py  decorators.py  errors.py  logger.py  transport.py
api_client_opti24/models/: card_group.py  final_prices.py  limits.py  reports.py  transactions.py
api_client_opti24/services/: Invites.py  __init__.py  auth.py  card_group.py  contract.py  limits.py  region_limits.py  reports.py  restrictions.py  transactions.py  users.py
apiclientopti24/: .gitignore  README.md  config.py  pyproject.toml
apiclientopti24/models/: restrictions.py  transactions.py
apiclientopti24/src/api_client_opti24/: client.py  decorators.py  errors.py  example.py  transport.py  utils.py
apiclientopti24/src/api_client_opti24/services/: Invites.py  auth.py  card_group.py  cards.py  contract.py  ewallet.py  limits.py  region_limits.py  reports.py  restrictions.py  transactions.py
apiclientopti24/tests/: test_auth.py
examples/: example.py  example_auth.py  example_cards.py  example_contract.py  example_ewallet.py  example_group_cards.py  example_limits.py  example_region_limits.py  example_reports.py  example_restrictions.py  example_transactions.py
gazprom-client/: pyproject.toml
gazprom-client/.github/workflows/: ci.yml
src/api_client_opti24/: client.py  decorators.py  logger.py  transport.py
src/api_client_opti24/models/: auth.py  card_group.py  cards.py  contracts.py  (+9 more)
tests/: test_auth.py  test_cards.py  test_contracts.py  test_transport.py  test_users.py
(+14 files in other folders)
