[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apiclientopti24"
version = "0.1.0"
description = "Python клиент для API Opti24"
authors = [{ name = "Ваше имя", email = "email@example.com" }]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.8.2",
    "fastapi>=0.95.0",
    "uvicorn>=0.25.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.3",
    "rich>=13.9.2",
]

[project.urls]
Homepage = "https://github.com/ваш-репозиторий"